k8s/fashion-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fashion-ingress
  namespace: fashion-platform
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fashion-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fashion-backend-service
                port:
                  number: 5000
